# ar-io-solana-contracts

./: .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  INVARIANTS.md  README.md  STAGING_RECOVERY.md  TESTING.md  build-sbf.sh  idl-event-snapshots.json  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/ant-version-bump/: SKILL.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bpf-integration.yml  bridge_monitor.yaml  build-test.yml  codeql.yml  docker-builder.yml  recovery-feature-guard.yml  release-clients-ts.yml  release-devnet.yml  release-mainnet.yml  release-plz.yml  release.yml  upgrade-devnet.yml  upgrade-mainnet.yml
clients/ts/: .gitignore  README.md  package.json  tsconfig.json
clients/ts/scripts/: codegen.mjs  postinstall.mjs
clients/ts/src/: index.ts
clients/ts/src/canonical/: ant-escrow.ts  index.ts
clients/ts/test/: canonical.cross.test.ts
docker/: Dockerfile
docs/: ACCOUNT_SCALING_PATTERNS.md  ACTIVE_VAULT_DISABLE_ROLLOUT.md  ANT_ESCROW_CU_BASELINE.md  ANT_ESCROW_DESIGN.md  ANT_ESCROW_PROTOCOL_SPEC.md  ATTESTOR_SECURITY_REVIEW.md  BEHAVIORAL_DIFFERENCES.md  COMPUTE_AND_LIMITS.md  DECISIONS.md  EPOCH_SETTINGS_REINIT_PLAN.md  ESCROW_SECURITY_AUDIT_BRIEF.md  EVENTS.md  FEATURE_MATRIX.md  FIX_PLANS.md  FUNDING_MODES.md  PRIMARY_NAME_ANTCONFIG_ROLLOUT.md  RENT_RECLAIM.md  RESTORE_ACTIVE_VAULT_RELOCK.md  SECURITY_AUDIT_2026-04-29.md  SECURITY_AUDIT_INDEPENDENT.md  SQUADS_OPS.md  WHITEPAPER_COMPARISON.md  WORKFLOWS.md
docs/adrs/: 0000-template.md  0020-schema-migration-grow-then-deserialize.md  0021-escrow-vault-relocks-non-revocable.md  0022-escrow-disable-active-vault-relock.md  0023-prescribe-live-total-weight.md  0024-retire-devnet-shrunk-standardize-full-size-registries.md  0025-delegate-share-keyed-off-tally-snapshot.md  0026-admin-authority-transfer.md  README.md
docs/archive/: README.md
localnet/: surfpool-svm-features.sh
program-ids/: README.md  devnet.json  mainnet.json  staging.json
programs/ario-ant/: Cargo.toml
programs/ario-ant-escrow/: Cargo.toml
programs/ario-ant-escrow/examples/: canonical.rs
programs/ario-ant-escrow/fuzz/: Cargo.toml
programs/ario-ant-escrow/fuzz/fuzz_targets/: verify_personal_sign.rs  verify_rsa_pss.rs
programs/ario-ant-escrow/idl/: ario_ant_escrow.json
programs/ario-ant-escrow/src/: canonical.rs  error.rs  events.rs  lib.rs  mpl_core_cpi.rs  schema_migration.rs  state.rs  vault_introspect.rs
programs/ario-ant-escrow/src/instructions/: admin_purge_unclaimed.rs  cancel.rs  cancel_token_deposit.rs  cancel_vault_deposit.rs  claim_arweave_attested.rs  claim_ethereum.rs  claim_tokens_arweave_attested.rs  claim_tokens_ethereum.rs  claim_vault_arweave_attested.rs  claim_vault_ethereum.rs  deposit.rs  deposit_tokens.rs  deposit_vault.rs  mod.rs  update_recipient.rs  update_token_recipient.rs  update_vault_recipient.rs
programs/ario-ant-escrow/src/verify/: attested.rs  ethereum.rs  mod.rs
programs/ario-ant-escrow/tests/: cross_program_vault_claim.rs  integration.rs  migration_e2e.rs
programs/ario-ant/src/: acl.rs  error.rs  lib.rs  migration.rs  mpl_core_cpi.rs  recovery.rs  schema_migration.rs  state.rs
programs/ario-ant/tests/: clear_attributes.rs  events.rs  integration.rs  migration_e2e.rs  schema_migration.rs  sync_attributes.rs  transfer_event.rs
programs/ario-ant/tests/fixtures/: ant-import-e2e.json  ant-state-sample.json  ant-state-with-metadata-sample.json
programs/ario-arns/: Cargo.toml
programs/ario-arns/src/: error.rs  lib.rs  migration.rs  pricing.rs  recovery.rs  schema_migration.rs
programs/ario-arns/src/instructions/: cost.rs  demand.rs  initialize.rs  manage.rs  manage_from_stake.rs  mod.rs  prune.rs  purchase.rs  purchase_from_stake.rs  reserved.rs
programs/ario-arns/src/state/: mod.rs
programs/ario-arns/tests/: integration.rs  migration_e2e.rs  schema_migration.rs
programs/ario-core/: Cargo.toml
programs/ario-core/src/: constants.rs  error.rs  lib.rs  migration.rs  recovery.rs  schema_migration.rs
programs/ario-core/src/instructions/: admin.rs  initialize.rs  mod.rs  primary_name.rs  release_treasury.rs  token.rs  vault.rs
programs/ario-core/src/state/: mod.rs
programs/ario-core/tests/: integration.rs  migration_e2e.rs  schema_migration.rs
programs/ario-gar/: Cargo.toml
programs/ario-gar/examples/: predict_prescribed_observers.rs
programs/ario-gar/src/: error.rs  lib.rs  migration.rs  recovery.rs  schema_migration.rs
programs/ario-gar/src/instructions/: allowlist.rs  delegate.rs  distribution.rs  epoch.rs  gateway.rs  initialize.rs  mod.rs  observation.rs  operator_stake.rs  payment.rs  withdrawal.rs
programs/ario-gar/src/state/: mod.rs
programs/ario-gar/tests/: integration.rs  migration_e2e.rs
scripts/: bridge-monitor.mjs  check-attestor-pubkey.sh  cu-baseline.sh  devnet-deploy.sh  fund-devnet.sh  idl-event-snapshot.mjs  install-git-hooks.sh  mainnet-prepare-upgrade.sh  package-release.sh  staging-v2-deploy-and-squads.sh  start-localnet.sh  test-integration.sh
test-utils/: Cargo.toml
test-utils/src/: lib.rs
