[workspace]
members = [
    "programs/ario-core",
    "programs/ario-gar",
    "programs/ario-arns",
    "programs/ario-ant",
    "programs/ario-ant-escrow",
    "test-utils",
]
resolver = "2"

[profile.release]
overflow-checks = true

# Workspace-wide lint policy.  Anchor's proc macros and the Lua→Rust port
# trigger many newer clippy lints that are harmless in this codebase.
# Keep -D warnings in CI and allow the noisy categories here.
[workspace.lints.rust]
unexpected_cfgs = "allow"        # Anchor emits cfg(anchor-debug)
unused_mut = "allow"             # test scaffolding
unused_variables = "allow"       # test scaffolding
unused_imports = "allow"         # test scaffolding
dead_code = "allow"              # test helpers
ambiguous_glob_reexports = "allow"

[workspace.lints.clippy]
unnecessary_cast = "allow"       # explicit casts in fixed-point math
too_many_arguments = "allow"     # Anchor instruction handlers
manual_saturating_arithmetic = "allow"
needless_range_loop = "allow"    # test scaffolding
manual_contains = "allow"
manual_div_ceil = "allow"
derivable_impls = "allow"
unnecessary_map_or = "allow"
manual_range_contains = "allow"
redundant_field_names = "allow"
nonminimal_bool = "allow"
assertions_on_constants = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
useless_conversion = "allow"
needless_borrow = "allow"
cloned_ref_to_slice_refs = "allow"
manual_range_patterns = "allow"
while_let_loop = "allow"
manual_is_multiple_of = "allow"
to_string_in_format_args = "allow"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ar-io/ar-io-solana-contracts"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
bytemuck = { version = "1.14", features = ["derive"] }
# Pin 2.1.x to match Agave CLI and avoid pulling newer solana-* crates that require a newer
# `cargo-build-sbf` / platform-tools than ships with Solana 2.1.0 (rustc 1.79 cannot parse
# blake3 1.8+ manifests that use edition2024).
solana-program = "=2.1.0"
solana-program-test = "=2.1.0"
solana-sdk = "=2.1.0"
spl-token = "7.0"
spl-associated-token-account = "6.0"
mpl-token-metadata = "5.1"
tokio = { version = "1", features = ["full"] }
# Pin so `cargo-build-sbf`'s older Cargo (bundled with Solana 2.1.0) can parse the manifest
# (blake3 1.8+ uses edition2024). `traits-preview` matches `solana-program`'s blake3 feature set.
blake3 = { version = "=1.5.5", features = ["traits-preview"] }
# proc-macro-crate 3.5+ pulls toml_edit / toml_parser with edition2024 manifests (unsupported by SBF Cargo 1.79).
proc-macro-crate = "=3.2.0"
# indexmap 2.12+ raises MSRV past SBF rustc 1.79; 2.14+ also pulls hashbrown 0.17 (edition2024 manifests).
indexmap = "=2.11.0"
# unicode-segmentation 1.13.2 requires rustc 1.85 (rejected by SBF rustc 1.79).
unicode-segmentation = "=1.12.0"
proptest = "1"
