[package]
name = "ario-gar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AR.IO GAR Program - Gateway Address Registry with staking, delegation, epochs, observations, and rewards"

[lib]
crate-type = ["cdylib", "lib"]
name = "ario_gar"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# devnet-shrunk: compile-time shrink of zero-copy registries for smoke-test
# clusters. GatewayRegistry: 3000→30 slots (~168 KB→~1.7 KB), Epoch.failure_counts
# matches. Mainnet/testnet MUST NOT enable this feature. See state/mod.rs.
devnet-shrunk = []
migration-test = []
# No-op: defined so workspace-wide --features network-mainnet /
# network-devnet works during build-sbf.sh's BPF build (only
# ario-ant-escrow actually gates on these to bake the cluster
# identifier into its canonical claim message).
network-mainnet = []
network-devnet = []
# Post-finalize recovery ix. **NEVER ENABLE FOR MAINNET BUILDS.** Adds
# `admin_post_finalize_repair_account` (multi-sig-gated) that bypasses
# the `migration_active` lock-out. See programs/ario-gar/src/recovery.rs
# and the CI guard at .github/workflows/recovery-feature-guard.yml.
recovery = []
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
blake3.workspace = true
proc-macro-crate.workspace = true
indexmap.workspace = true
unicode-segmentation.workspace = true
bytemuck.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
spl-token = { workspace = true, features = ["no-entrypoint"] }
tokio.workspace = true
proptest.workspace = true
ario-test-utils = { path = "../../test-utils" }

[lints]
workspace = true
