[package]
name = "ario-gar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AR.IO GAR Program - Gateway Address Registry with staking, delegation, epochs, observations, and rewards"

[lib]
crate-type = ["cdylib", "lib"]
name = "ario_gar"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
migration-test = []
# No-op: defined so workspace-wide --features network-mainnet /
# network-devnet works during build-sbf.sh's BPF build (only
# ario-ant-escrow actually gates on these to bake the cluster
# identifier into its canonical claim message).
network-mainnet = []
network-devnet = []
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
blake3.workspace = true
proc-macro-crate.workspace = true
indexmap.workspace = true
unicode-segmentation.workspace = true
bytemuck.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
spl-token = { workspace = true, features = ["no-entrypoint"] }
tokio.workspace = true
proptest.workspace = true
ario-test-utils = { path = "../../test-utils" }
# Test-only: the distribute_epoch lifecycle tests CPI into
# `ario_core::release_treasury_to_recipient`, so they load ario-core as a
# native-processor program in solana-program-test. This is a dev-dependency
# cycle (ario-core -> ario-gar normally), which Cargo permits because
# dev-dependencies never enter the compiled `.so` / cpi graph. `cpi`
# (=> no-entrypoint) is set so the linked-in ario-core does NOT emit a
# duplicate Solana entrypoint symbol; `ario_core::entry` stays reachable
# for the test's native processor bridge.
ario-core = { path = "../ario-core", features = ["cpi"] }

[lints]
workspace = true
